fix align navbar__button

--- a/src/css/Catalog.css
+++ b/src/css/Catalog.css
@@ -9,6 +9,7 @@
   width: 170px;
   padding: 32px 20px;
   text-align: center;
+  vertical-align: top;
 }
 .navbar__icon {
   width: 105px;
